examples/gke/configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service
spec:
  selector:
    app: llm
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
