examples/gke/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-service
                port:
                  number: 80
